# pccx-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  RELEASING.md  todolist.md
.github/workflows/: ci.yml
crates/ai_copilot/src/: lib.rs
crates/authoring/: Cargo.toml
crates/authoring/src/: api_spec.rs  block_diagram.rs  fsm_diagram.rs  isa_spec.rs  lib.rs  sv_parser.rs
crates/core/: Cargo.toml
crates/core/src/: api_ring.rs  bottleneck.rs  chrome_trace.rs  coverage.rs  cycle_estimator.rs  device_session_status.rs  diagnostics_handoff.rs  isa_replay.rs  lib.rs  live_window.rs  mmap_reader.rs  pccx_format.rs  plugin.rs  roofline.rs  simulator.rs  step_snapshot.rs  synth_report.rs  trace.rs  typed.rs  vcd.rs  vcd_writer.rs  vivado_timing.rs
crates/core/tests/: analyze_cli.rs  device_session_status_cli.rs  diagnostics_handoff_cli.rs  integration_test.rs  json_boundary_examples.rs  public_boundary_docs.rs  public_claim_guards.rs  status_cli.rs
crates/evolve/src/: lib.rs  speculative.rs
crates/lsp/src/: isa_provider.rs  lib.rs  monaco_bridge.rs  sv_diagnostics.rs  sv_hover.rs  sv_provider.rs
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs
crates/reports/src/: lib.rs
crates/schema/src/: lib.rs
crates/uvm_bridge/src/: lib.rs
crates/verification/src/: golden_diff.rs  lib.rs  robust_reader.rs
crates/workflow_facade/: CHANGELOG.md  Cargo.toml
crates/workflow_facade/src/: lib.rs
cycle/: ROUNDS.md  STATE.json
cycle/round_001/: judge_report.md
cycle/round_003/: implemented_T2.md  judge_report.md
cycle/round_004/: implemented_T1.md  implemented_T3.md  judge_report.md
cycle/round_005/: judge_report.md  research_findings.md
cycle/round_006/: implemented_T-2.md  user_directive.md
docs/: CLI_BOUNDARY_EXAMPLES.md  CLI_CORE_BOUNDARY.md  conf.py  requirements.txt
docs/design/: phase2_intellisense.md
docs/examples/: run-status.example.json
docs/ko/: conf.py
docs/releases/: v0.1.0-alpha.md
docs/user-guide/: pccx-lab-user-guide.md
fixtures/: missing_endmodule.sv  ok_module.sv
scripts/: README.md  json_boundary_inventory_validator.py  json_boundary_shape_validator.py  pccx-lab-boundary-smoke.sh  test-json-boundary-inventory.sh  test-json-boundary-shapes.sh  validate-local.sh
scripts/fixtures/: json-boundary-inventory.json
scripts/fixtures/boundary-smoke/base/crates/core/src/: device_session_status.rs
scripts/fixtures/boundary-smoke/base/docs/examples/: launcher-device-session-status.example.json  mcp-blocked-invocation-result.example.json  mcp-permission-model.example.json  mcp-pr-summary-handoff.example.json  mcp-read-only-analysis-flow.example.json  mcp-tool-list.example.json  plugin-boundary-plan.example.json  plugin-capability-list.example.json  plugin-dry-run-flow.example.json  plugin-input-contract.example.json  plugin-output-contract.example.json  plugin-permission-model.example.json
scripts/fixtures/json-boundary-inventory/cases/: mismatched-boundary-kind.json  missing-coverage-path.json  missing-example-path.json  missing-required-field.json  unknown-boundary-kind.json
scripts/fixtures/json-boundary-shapes/cases/diagnostics-list-wrong-type/overlay/docs/examples/: diagnostics-envelope.example.json
scripts/fixtures/json-boundary-shapes/cases/launcher-device-session-safety-flags-missing/overlay/docs/examples/: launcher-device-session-status.example.json
scripts/fixtures/json-boundary-shapes/cases/launcher-handoff-safety-flags-missing/overlay/docs/examples/: launcher-diagnostics-handoff.example.json
scripts/fixtures/json-boundary-shapes/cases/mcp-permission-profiles-missing/overlay/docs/examples/: mcp-permission-model.example.json
scripts/fixtures/json-boundary-shapes/cases/missing-status-schema-version/overlay/docs/examples/: run-status.example.json
scripts/fixtures/json-boundary-shapes/cases/plugin-permission-profiles-missing/overlay/docs/examples/: plugin-permission-model.example.json
scripts/fixtures/json-boundary-shapes/cases/theme-presets-wrong-type/overlay/docs/examples/: theme-tokens.example.json
scripts/fixtures/json-boundary-shapes/cases/workflow-descriptors-missing-list/overlay/docs/examples/: workflow-descriptors.example.json
scripts/fixtures/json-boundary-shapes/cases/workflow-proposal-missing-state/overlay/docs/examples/: workflow-proposals.example.json
src/ai_copilot/: Cargo.toml
src/ai_copilot/src/: lib.rs
src/authoring/: Cargo.toml
src/authoring/src/: api_spec.rs  isa_spec.rs  lib.rs
src/core/: Cargo.toml
src/core/src/: chrome_trace.rs  golden_diff.rs  lib.rs  live_window.rs  plugin.rs  synth_report.rs  trace.rs  vcd.rs  vcd_writer.rs
src/core/tests/: integration_test.rs
src/evolve/: Cargo.toml
src/evolve/src/: lib.rs
src/lsp/: CHANGELOG.md  Cargo.toml
src/lsp/src/: lib.rs
src/remote/: openapi.yaml
src/remote/src/: lib.rs
src/reports/: Cargo.toml
src/reports/src/: lib.rs
src/ui/e2e/: test_bottlenecks.py  test_run_verification.py  test_smoke.py  test_synth_report.py
src/ui/src/: App.tsx  CanvasView.tsx  FlameGraph.tsx  HardwareVisualizer.tsx  ReportGenerator.tsx  SynthStatusCard.tsx  Timeline.tsx  VerificationSuite.tsx  WaveformViewer.tsx  i18n.tsx
src/ui/src-tauri/: Cargo.toml
src/ui/src-tauri/src/: lib.rs  main.rs
src/verification/src/: lib.rs
ui/: package.json
ui/e2e/: test_roofline_and_uvm.py
ui/scripts/: local-assistant-guard.mjs
ui/scripts/fixtures/local-assistant-guard/: assistant-wording.fixture.ts  safe-local.fixture.ts
ui/src/: App.css  App.tsx  BottomPanel.tsx  CanvasView.tsx  CodeEditor.tsx  CommandPalette.tsx  CxPlayground.tsx  DiffView.tsx  FileTree.tsx  HardwareVisualizer.tsx  LabStatusPanel.tsx  MemoryDump.tsx  MenuBar.tsx  ReportBuilder.tsx  ReportGenerator.tsx  ScenarioFlow.tsx  ThemeContext.tsx  TitleBar.tsx  VerificationRunner.tsx  VerificationSuite.tsx  WaveformViewer.tsx  i18n.tsx  keybindings.ts  main.tsx  monacoSetup.ts  useShortcuts.tsx
ui/src-tauri/: Cargo.toml
ui/src-tauri/src/: lib.rs
ui/src/hooks/: useCycleCursor.ts
(+2 files in other folders)
