[package]
name = "pccx-authoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
# Authoring pipeline — ISA and driver-API definitions as TOML data,
# with lint + codegen emitters (SV pkg, C header, Rust bindings).
# The phase-5D Model-to-ISA-API compiler roadmap item consumes these
# specs as its ground-truth surface.

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml = "1.1.2"
thiserror.workspace = true
