[package]
name = "pccx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
[features]
default = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bincode = "1.3.3"
# VCD (IEEE 1364 §21) ingest for the Waveform panel.  Pure-Rust parser
# with an MIT licence — safe for the Apache-2.0 public core.
vcd = "0.7"
toml = "1.1.2"
# Memory-mapped I/O for large trace files (100 MB+).
memmap2 = "0.9"

# Central pccx-lab CLI entry point (scaffold, lives here to avoid a
# separate crate; can be promoted to crates/cli/ later).
[[bin]]
name = "pccx-lab"
path = "src/bin/pccx_lab.rs"

[[bin]]
name = "pccx-from-xsim-log"
path = "src/bin/from_xsim_log.rs"

[[bin]]
name = "generator"
path = "src/bin/generator.rs"

[dev-dependencies]
# pccx-core itself (via path) is used in integration tests
# No extra test-only deps needed — the workspace provides everything
tempfile = "3"
