[package]
name = "pccx-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
# Secure remote backend daemon — Phase 3.
#
# Feature set:
#   * HTTP REST API for remote trace analysis sessions.
#   * Session management (create / list / destroy).
#   * Health + OpenAPI spec endpoints.
#   * Future: WireGuard or mTLS-over-QUIC tunnel, OIDC SSO + hardware
#     2FA, per-user RBAC, zero-trust audit log, per-session overlayfs
#     sandbox, kill-switch API, optional WASM web client.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
pccx-core = { path = "../core" }

[[bin]]
name = "pccx-server"
path = "src/bin/pccx_server.rs"
