[package]
name = "pccx-workflow-facade"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
[dependencies]
pccx-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
